ui/views_content_client/views_content_client_main_parts.cc
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/browser/context_factory.h"
 #include "content/shell/browser/shell_browser_context.h"
 #include "ui/base/ime/input_method_initializer.h"
+#include "ui/base/material_design/material_design_controller.h"
 #include "ui/views/test/desktop_test_views_delegate.h"
 
 namespace ui {
@@ -25,6 +26,7 @@ ViewsContentClientMainParts::~ViewsContentClientMainParts() {
 }
 
 void ViewsContentClientMainParts::PreMainMessageLoopRun() {
+  ui::MaterialDesignController::Initialize();
   ui::InitializeInputMethodForTesting();
   browser_context_.reset(new content::ShellBrowserContext(false, NULL));
 
